--- a/_posts/THM/2025-4-11-Billing.md
+++ b/_posts/THM/2025-4-11-Billing.md
@@ -8,20 +8,24 @@ tags:
   - Writeups
 by: Mahmud
 image: https://tryhackme-images.s3.amazonaws.com/room-icons/618b3fa52f0acc0061fb0172-1741192887584
-published: true
+published: false
 ---
 ## User flag 
 
 1. First use `nmap`
+
 ```Console
 nmap -sV IP
 ```
+
 2. it will Result
+
 ```Console
 ```
 3. there is magnusbilling system check for known vulnerability 
 4. there is vulnerability with name of `CVE-2023-xxxxx`
 5. let's use Metasploit `msfconsle` search --> set RHOST --> set LHOST --> exploite  
+
 ```Console
 ```
 6. now we can see the user flag in `/home/magnuis/user.txt`
