--- a/_posts/Microsoft/Azure/AZ104 Study notes/2025-7-16-AZ104_Notes.md
+++ b/_posts/Microsoft/Azure/AZ104 Study notes/2025-7-16-AZ104_Notes.md
@@ -195,8 +195,27 @@ The **AZ-104 certification** is designed for **Azure Administrators** who manage
     - Monitor and interpret backup reports and alerts
 
 ---
+## Let's Start
+### 1. **Manage Azure identities and governance
+
+#### - Users
+
+
+#### - Groups
+- **Microsoft 365 Groups** are used for collaboration between users, both inside and outside your company. They include collaboration services such as SharePoint and Planner. Microsoft Teams uses Microsoft 365 Groups for membership.
+- **Distribution groups** are used for sending email notifications to a group of people.
+- **Security groups** are used for granting access to resources such as SharePoint sites.
+- **Mail-enabled security groups** are used for granting access to resources such as SharePoint, and emailing notifications to those users.
+- **Shared mailboxes** are used when multiple people need access to the same mailbox, such as a company information or support email address.
+- **Dynamic distribution groups** are created to expedite the mass sending of email messages and other information within an organization.
+
+|                                          | Microsoft 365 Groups | Distribution groups | Security groups | Mail-enabled security groups | Shared mailboxes | Dynamic distribution groups |
+| ---------------------------------------- | -------------------- | ------------------- | --------------- | ---------------------------- | ---------------- | --------------------------- |
+| Mail-enabled                             | Yes                  | Yes                 | No              | Yes                          | Yes              | Yes                         |
+| Dynamic membership in Microsoft Entra ID | Yes                  | No                  | Yes             | No                           | No               | No                          |
+
+---
 
 ## Resources
 - Azure Administrator Certification (AZ-104) - Full Course to PASS the Exam
   {% include embed/youtube.html id='10PbGbTUSAg' %}
-
