--- a/_posts/Microsoft/Azure/2025-10-23-WHfB.md
+++ b/_posts/Microsoft/Azure/2025-10-23-WHfB.md
@@ -2,7 +2,7 @@
 title: Windows Hello for business
 description: simple way to deploy windows hello for business
 date: 2025-10-23 10:00 +0200
-categories: Cloud Azure
+categories: Azure
 tags:
   - Microsoft
   - Azure
