--- a/_posts/Microsoft/Azure/2025-7-15-azure.md
+++ b/_posts/Microsoft/Azure/2025-7-15-azure.md
@@ -1,10 +1,10 @@
 ---
 title: what is azure
-description:  Microsoft Azure for Sysadmins and Security Professionals
+description: Microsoft Azure for Sysadmins and Security Professionals
 date: 2025-07-15 10:00 +0200
-categories: Cloud Azure
+categories: Azure
 tags:
-  - Microsoft 
+  - Microsoft
   - Azure
   - Cloud
 by: Mahmud
