--- a/_posts/Microsoft/Azure/AZ104 Study notes/2025-7-16-AZ104_Notes.md
+++ b/_posts/Microsoft/Azure/AZ104 Study notes/2025-7-16-AZ104_Notes.md
@@ -1,11 +1,11 @@
 ---
 title: AZ-104 Study Notes
 layout: post
-description:  A comprehensive guide to preparing for the AZ-104 Azure Administrator certification exam.
+description: A comprehensive guide to preparing for the AZ-104 Azure Administrator certification exam.
 date: 2025-07-15 10:00 +0200
-categories: Cloud Azure
+categories: Azure AZ-104
 tags:
-  - Microsoft 
+  - Microsoft
   - Azure
   - Cloud
   - Certification
